# linuxdev25

./: .gitignore
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  script1.gdb  script2.gdb
06_Tracing/: Makefile  move.c  protect.c  run_tests.sh
07_Environmental/: Makefile.am  autogen.sh  configure.ac  rhasher.c
07_Environmental/tests/: test_md5.sh  test_sha1.sh
08_I18n/: CMakeLists.txt
08_I18n/src/: main.c
09_PatchDiff/: Makefile  main0.c  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: CMakeLists.txt  compile.sh
10_LibTesting/include/: buf.h
10_LibTesting/src/: buf.c
10_LibTesting/tests/: CMakeLists.txt  t_grow.c  t_init.c  t_push_pop.c
11_Documenting/: CMakeLists.txt
11_Documenting/po/: ru.po  ru_RU.UTF-8.po
11_Documenting/src/: main.c  rome.py
12_InstallPackaging/: CMakeLists.txt  Doxyfile.in  TODO.md  cp2test.sh
12_InstallPackaging/include/: roman.h
12_InstallPackaging/po/: ru_RU.UTF-8.po  ru_RU.UTF-8.po~
12_InstallPackaging/src/: main.c  roman.c
12_InstallPackaging/tests/: CMakeLists.txt  t_roman.c  test_utils.h
